# pgstream

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  sample_app.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  publish.yml
docs/: api-reference.md  building-a-sink.md  concepts.md  configuration.md  delivery-guarantees.md  getting-started.md  index.md  sinks.md
examples/: 02_sink.py  03_decoder.py  basic_watch.py
src/pgstream/: __init__.py  _cli.py  decoder.py  events.py  replication.py  stream.py
src/pgstream/sinks/: __init__.py  base.py  pgvector.py  qdrant.py
tests/: test_decoder.py  test_replication.py  test_stream.py
